--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ springdoc.version=1.0
 springdoc.api-docs.enable=true
 springdoc.api-docs.path=/v3/api-docs
 springdoc.api-docs.swagger-ui.path=/swagger-ui.html
+#springdoc.show-actuator=true
 
 ##postgres properties
 #spring.datasource.driver-class-name=org.postgresql.Driver
