feat(properties): added prod properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,7 @@
 #server properties
 spring.application.name=momentum
-server.port=${application-port}
+server.port=9600
 server.servlet.context-path=/momentum
-spring.profiles.active=prod
 
 #springdoc-properties
 springdoc.version=1.0
