--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,6 +1,6 @@
 #server properties
 spring.application.name=momentum
-server.port=${application-port}
+server.port=9600
 server.servlet.context-path=/momentum
 spring.profiles.active=default
 
@@ -18,8 +18,8 @@ postgres.service.port=5432
 postgres.service.username=admin
 postgres.service.password=admin
 spring.datasource.platform=postgres
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
 database.name=momentumdb
 
 ##datasource postgres
