--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #server properties
 spring.application.name=momentum
-server.port=${application-port}
+server.port=9600
 server.servlet.context-path=/momentum
-spring.profiles.active=prod
+spring.profiles.active=default
 
 #springdoc-properties
 springdoc.version=1.0
@@ -12,18 +12,21 @@ springdoc.api-docs.swagger-ui.path=/swagger-ui.html
 #springdoc.show-actuator=true
 
 ##postgres properties
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#postgres.service.host=localhost
-#postgres.service.port=
-#postgres.service.username=
-#postgres.service.password=
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
-#
+spring.datasource.driver-class-name=org.postgresql.Driver
+postgres.service.host=localhost
+postgres.service.port=5432
+postgres.service.username=admin
+postgres.service.password=admin
+spring.datasource.platform=postgres
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+database.name=momentumdb
+
 ##datasource postgres
-#spring.datasource.url=jdbc:postgresql://${postgres.service.host}:${postgresql.service.port}/${database.name}/?currentSchema=${database.name}
-#spring.datasource.username=${postgres.service.username}
-#spring.datasource.password=${postgres.service.password}
+spring.datasource.url=jdbc:postgresql://${postgres.service.host}:${postgres.service.port}/${database.name}
+spring.datasource.username=${postgres.service.username}
+spring.datasource.password=${postgres.service.password}
+spring.datasource.hikari.schema=backend
 
 ##mysql properties
 #spring.datasource.driver-class-name=org.mysql.cj.jdbc.driver
@@ -40,17 +43,17 @@ springdoc.api-docs.swagger-ui.path=/swagger-ui.html
 #spring.datasource.password=${mysql.service.password}
 
 #h2-properties
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
 # for persisting h2 data
 #spring.datasource.url=jdbc:h2:file:/data/demo
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.h2.console.settings.trace=false
+#spring.h2.console.settings.web-allow-others=false
 
 #hibernate-properties
 spring.jpa.show-sql=true
